--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 			<artifactId>xstream</artifactId>
 			<version>1.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
