--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.sarxos</groupId>
-	<artifactId>xstream-fixml-converter</artifactId>
+	<artifactId>fixml-converter</artifactId>
 	<version>0.1</version>
 
-	<name>XStream FIXML Converter</name>
-	<description>XStream converter for FIXML, it converts FIX message objects to XML</description>
+	<name>FIXML Converter</name>
+	<description>XStream based converter for FIXML, it converts FIX message objects to FIXML and vice versa</description>
 
 	<organization>
 		<name>Bartosz Firyn (SarXos)</name>
