--- a/pom.xml
+++ b/pom.xml
@@ -11,16 +11,9 @@
 	<description>XStream based converter for FIXML, it converts FIX message objects to FIXML and vice versa</description>
 
 	<organization>
-		<name>Bartosz Firyn (SarXos)</name>
-		<url>http://www.sarxos.pl</url>
+		<name>Bartosz Firyn (sarxos)</name>
+		<url>https://www.github.com/sarxos</url>
 	</organization>
-
-	<repositories>
-		<repository>
-			<id>sarxos-repo</id>
-			<url>http://www.sarxos.pl/repo/maven2</url>
-		</repository>
-	</repositories>
 
 	<distributionManagement>
 		<repository>
@@ -34,10 +27,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -58,19 +51,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.quickfixj</groupId>
-			<artifactId>quickfixj-core</artifactId>
-			<version>SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.quickfixj</groupId>
-			<artifactId>quickfixj-msg-fix50</artifactId>
-			<version>SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 			<version>1.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.servicemix.bundles</groupId>
+			<artifactId>org.apache.servicemix.bundles.quickfix</artifactId>
+			<version>1.5.3_1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
